--- a/public/templates/pages/about.twig
+++ b/public/templates/pages/about.twig
@@ -168,7 +168,7 @@
     <!-- Scripts -->
     <script src="/assets/lib/jquery.min.js"></script>
     <script src="/assets/lib/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/assets/lib/aos/aos.js"></script>
     <script src="/assets/scripts/aos_init.js"></script>
 </body>
 </html>
