--- a/public/templates/components/admin/admin_panel.twig
+++ b/public/templates/components/admin/admin_panel.twig
@@ -571,8 +571,9 @@
         </div>
     </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/assets/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/lib/aos/aos.js"></script>
+
     <script>
         // Inicializar AOS
         AOS.init({
