--- a/public/templates/components/auth/login_form.twig
+++ b/public/templates/components/auth/login_form.twig
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/assets/lib/aos/aos.js"></script>
     <script src="/assets/lib/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // Inicializar AOS
