--- a/public/templates/pages/api_docs.twig
+++ b/public/templates/pages/api_docs.twig
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
-    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/assets/lib/twbs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/styles/components/navbar.css">
-
-   
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/assets/lib/fontawesome/fontawesome-free-6.4.0-web/css/all.min.css">
     
@@ -383,8 +380,7 @@
     <!-- Scripts -->
     <script src="/assets/lib/jquery.min.js"></script>
     <script src="/assets/lib/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    
+    <script src="/assets/lib/aos/aos.js"></script>    
     <script src="/assets/scripts/api_docs.js"></script>
 </body>
 </html> 
