--- a/public/templates/pages/statistics.twig
+++ b/public/templates/pages/statistics.twig
@@ -8,13 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <!-- Estilos personalizados -->
     <link rel="stylesheet" href="/assets/styles/generic.css">
     <link rel="stylesheet" href="/assets/styles/components/navbar.css">
     <link rel="stylesheet" href="/assets/styles/components/footer.css">
-    <link rel="stylesheet" href="/assets/styles/pages/statistics.css">
     
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Animate.css -->
@@ -178,7 +175,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/assets/lib/aos/aos.js"></script>
     <script src="/assets/scripts/aos_init.js"></script>
     
     <script>
@@ -306,7 +303,6 @@
                 }
             });
             
-            // Gráfico de Hábitat
             const habitatCtx = document.getElementById('habitatChart').getContext('2d');
             const habitatChart = new Chart(habitatCtx, {
                 type: 'horizontalBar',
