removed some comments supongo

--- a/public/assets/styles/pages/profile.css
+++ b/public/assets/styles/pages/profile.css
@@ -137,7 +137,8 @@
   transition: all 0.3s ease;
 }
 
-.profile-nav-link:hover, .profile-nav-link.active {
+.profile-nav-link:hover,
+.profile-nav-link.active {
   background-color: rgba(59, 130, 246, 0.1);
   color: var(--primary-color);
 }
@@ -190,7 +191,7 @@
   .profile-container {
     flex-direction: column;
   }
-  
+
   .profile-sidebar {
     min-width: 100%;
   }
@@ -201,22 +202,22 @@
     width: 80px;
     height: 80px;
   }
-  
+
   .profile-avatar-placeholder {
     width: 80px;
     height: 80px;
     font-size: 2rem;
   }
-  
+
   .profile-avatar-wrapper {
     bottom: -40px;
   }
-  
+
   .profile-info {
     padding-top: 2.5rem;
   }
-  
+
   .profile-name {
     font-size: 1.25rem;
   }
-} 
+}
