simplified about with twig

--- a/public/templates/components/auth/login_form.twig
+++ b/public/templates/components/auth/login_form.twig
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="/assets/lib/twbs/bootstrap/dist/css/bootstrap.min.css">
-      <!-- Animate.css para animaciones -->
-    <link rel="stylesheet" href="/assets/lib/animate.css/animate.min.css">
-    <!-- AOS - Animate On Scroll -->
-    <link rel="stylesheet" href="/assets/lib/aos/aos.css">
-    <link rel="stylesheet" href="/assets/styles/pages/auth.css">
+    {% set styles = [
+        '/assets/lib/twbs/bootstrap/dist/css/bootstrap.min.css',
+        '/assets/lib/animate.css/animate.min.css', 
+        '/assets/lib/aos/aos.css',
+        '/assets/styles/pages/auth.css'
+    ] %}
+    {% for style in styles %}
+        <link rel="stylesheet" href="{{ style }}">
+    {% endfor %}
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
